--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.41",
     "gatsby-plugin-material-ui": "^2.1.6",
+    "gatsby-plugin-netlify": "^2.1.33",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-source-filesystem": "^2.1.48",
     "gatsby-transformer-yaml": "^2.2.25",
